improve term <-> dynamicobj translation